# polymarket-arb-bot

./: .env.example  .gitignore  README.md  SKILL.md  config.py  pyproject.toml  requirements.txt
modules/: __init__.py  engine.py  hedge.py  markets.py  positions.py  risk.py  scanner.py  swap.py  trading.py  wallet.py  ws_feed.py
scripts/: polyclaw.py
strategies/: combinatorial.py  endgame.py
utils/: logger.py  notifier.py
